# wikimore

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt
src/wikimore/: app.py
src/wikimore/static/css/: style.css
src/wikimore/templates/: article.html  base.html
templates/: article.html  base.html  home.html  search_results.html
